feat: integrate SonarQube MCP and fix code quality issues
- Added SonarQube service to Docker Compose

- Configured MCP server for SonarQube

- Fixed critical serialization issues in UI controllers

- Optimized logging with lambdas

- Refactored code to use Java 16+ features

- Updated documentation with refactoring log